IE8 compat for evalviewer, css fix for mixeval.
Evalviewer suffers from the same problem in IE8 as evaleditor where the
keyword 'class' can't be used bare as a key in a hash. It just needs to
be changed to a string.

Also removed some javascript hardcoded styles in evalviewer for the
scale weight.

The scale weight field was being wrapped and positioned too low in a way
that it overflows the question box boundary. This was fixed so that it's
positioned in the same line as the 'Descriptor' text.

--- a/app/webroot/css/ipeer.css
+++ b/app/webroot/css/ipeer.css
@@ -1057,7 +1057,7 @@ table.content-table {
   background-color: #4478AC;
   text-align: center;
   cursor: move;
-  padding: 0.3em
+  padding: 0.6em 0.3em;
 }
 
 .question-content {
@@ -1072,7 +1072,8 @@ table.content-table {
 }
 
 .multiplier {
-  width: 50px;
+	margin-left: 0.5em;
+	display: inline;
 }
 
 .remove-button {
@@ -1100,7 +1101,9 @@ textarea.question-title-textarea, textarea.question-descriptor {
 }
 
 .descriptor-title {
-  margin: 5px 0 3px 0;
+  margin: 0.5em 0;
+  width: 150px;
+  display: inline-block;
 }
 
 .descriptors {
@@ -1118,9 +1121,13 @@ textarea.question-title-textarea, textarea.question-descriptor {
 
 .scale-weight {
   float: right;
-  width: 90px;
   text-align: right;
+  margin: 0.3em 0;
   margin-right: 15px;
+}
+
+.scale-weight select {
+	margin-left: 0.5em;
 }
 
 .remove-descriptor-button {
